# GraphicsTemplate

./: .clang-format  CMakeLists.txt
include/: BaseGame.h  Buffer.h  Material.h  Primitive.h  Shader.h  Window.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: BaseGame.cpp  Buffer.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
